@@ -2,7 +2,7 @@ Source: liblnk
 Section: unknown
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 7), autotools-dev
+Build-Depends: debhelper (>= 7), autotools-dev, python-dev
 Standards-Version: 3.8.3
 Homepage: http://code.google.com/p/liblnk/
 
