@@ -1,6 +1,6 @@
 dnl Functions for libfdatetime
 dnl
-dnl Version: 20130409
+dnl Version: 20130928
 
 dnl Function to detect if libfdatetime is available
 dnl ac_libfdatetime_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -24,7 +24,7 @@ AC_DEFUN([AX_LIBFDATETIME_CHECK_LIB],
    [test "x$cross_compiling" != "xyes" && test "x$PKGCONFIG" != "x"],
    [PKG_CHECK_MODULES(
     [libfdatetime],
-    [libfdatetime >= 20120522],
+    [libfdatetime >= 20130928],
     [ac_cv_libfdatetime=yes],
     [ac_cv_libfdatetime=no])
    ])
@@ -66,7 +66,12 @@ AC_DEFUN([AX_LIBFDATETIME_CHECK_LIB],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
      fdatetime,
-     libfdatetime_fat_date_time_copy_from_uint32,
+     libfdatetime_fat_date_time_copy_from_32bit,
+     [ac_cv_libfdatetime_dummy=yes],
+     [ac_cv_libfdatetime=no])
+    AC_CHECK_LIB(
+     fdatetime,
+     libfdatetime_fat_date_time_copy_to_32bit,
      [ac_cv_libfdatetime_dummy=yes],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
@@ -118,7 +123,12 @@ AC_DEFUN([AX_LIBFDATETIME_CHECK_LIB],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
      fdatetime,
-     libfdatetime_filetime_copy_from_uint64,
+     libfdatetime_filetime_copy_from_64bit,
+     [ac_cv_libfdatetime_dummy=yes],
+     [ac_cv_libfdatetime=no])
+    AC_CHECK_LIB(
+     fdatetime,
+     libfdatetime_filetime_copy_to_64bit,
      [ac_cv_libfdatetime_dummy=yes],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
@@ -175,7 +185,12 @@ AC_DEFUN([AX_LIBFDATETIME_CHECK_LIB],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
      fdatetime,
-     libfdatetime_floatingtime_copy_from_uint64,
+     libfdatetime_floatingtime_copy_from_64bit,
+     [ac_cv_libfdatetime_dummy=yes],
+     [ac_cv_libfdatetime=no])
+    AC_CHECK_LIB(
+     fdatetime,
+     libfdatetime_floatingtime_copy_to_64bit,
      [ac_cv_libfdatetime_dummy=yes],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
@@ -227,7 +242,12 @@ AC_DEFUN([AX_LIBFDATETIME_CHECK_LIB],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
      fdatetime,
-     libfdatetime_nsf_timedate_copy_from_uint64,
+     libfdatetime_nsf_timedate_copy_from_64bit,
+     [ac_cv_libfdatetime_dummy=yes],
+     [ac_cv_libfdatetime=no])
+    AC_CHECK_LIB(
+     fdatetime,
+     libfdatetime_nsf_timedate_copy_to_64bit,
      [ac_cv_libfdatetime_dummy=yes],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
@@ -279,12 +299,22 @@ AC_DEFUN([AX_LIBFDATETIME_CHECK_LIB],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
      fdatetime,
-     libfdatetime_posix_time_copy_from_uint32,
+     libfdatetime_posix_time_copy_from_32bit,
      [ac_cv_libfdatetime_dummy=yes],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
      fdatetime,
-     libfdatetime_posix_time_copy_from_uint64,
+     libfdatetime_posix_time_copy_to_32bit,
+     [ac_cv_libfdatetime_dummy=yes],
+     [ac_cv_libfdatetime=no])
+    AC_CHECK_LIB(
+     fdatetime,
+     libfdatetime_posix_time_copy_from_64bit,
+     [ac_cv_libfdatetime_dummy=yes],
+     [ac_cv_libfdatetime=no])
+    AC_CHECK_LIB(
+     fdatetime,
+     libfdatetime_posix_time_copy_to_64bit,
      [ac_cv_libfdatetime_dummy=yes],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
@@ -332,11 +362,6 @@ AC_DEFUN([AX_LIBFDATETIME_CHECK_LIB],
     AC_CHECK_LIB(
      fdatetime,
      libfdatetime_systemetime_copy_from_byte_stream,
-     [ac_cv_libfdatetime_dummy=yes],
-     [ac_cv_libfdatetime=no])
-    AC_CHECK_LIB(
-     fdatetime,
-     libfdatetime_systemetime_copy_from_uint64,
      [ac_cv_libfdatetime_dummy=yes],
      [ac_cv_libfdatetime=no])
     AC_CHECK_LIB(
